# movies-recsys-collaborative-filtering

./: Cargo.toml  readme.md
.github/workflows/: CI.yaml
src/: data_processing.rs  endpoints.rs  main.rs  matrix.rs  user_id.rs
