[package]
name = "movies-recsys-collaborative-filtering"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "2.2.0"
log = "0.4.22"
reqwest = "0.12.8"
simple_logger = "5.0.0"
tokio = { version = "1.40.0", features = ["full"] }
csv = "1.3.0"
sprs = "0.11.2"
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ndarray = "0.16.1"
